force-app/main/default/objects/Event_Organizer__c/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <description>User Alternative Email Address</description>
    <inlineHelpText>Enter your second Email Address</inlineHelpText>
    <label>Alternative Email</label>
    <type>Email</type>
</CustomField>