force-app/main/default/objects/Event_Organizer__c/fields/Alternative_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone_Number__c</fullName>
    <description>User Alternative Phone Number</description>
    <inlineHelpText>Enter Your Second Phone Number</inlineHelpText>
    <label>Alternative Phone Number</label>
    <type>Phone</type>
</CustomField>