force-app/main/default/objects/Event_Organizer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>User Email Address</description>
    <inlineHelpText>Enter Your Email Address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>