force-app/main/default/objects/Event_Organizer__c/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <description>User Phone Number</description>
    <inlineHelpText>Enter Your Phone Number</inlineHelpText>
    <label>Phone No.</label>
    <type>Phone</type>
</CustomField>